--- a/config/phpunit.xml.dist
+++ b/config/phpunit.xml.dist
@@ -21,4 +21,7 @@
 	<logging>
 		<log type="testdox-text" target="php://stdout"/>
 	</logging>
+	<php>
+		<ini name="display_errors" value="true"/>
+	</php>
 </phpunit>
