--- a/.github/workflows/build-release-changelog-tagged.yml
+++ b/.github/workflows/build-release-changelog-tagged.yml
@@ -22,7 +22,7 @@ jobs:
     # https://github.com/shivammathur/setup-php/blob/master/examples/cakephp-mysql.yml
     services:
       mysql:
-        image: mysql:latest
+        image: mysql:5.7.26
         env:
           MYSQL_ROOT_PASSWORD: ${{ env.MYSQL_ROOT_PASSWORD }}
           MYSQL_DATABASE: ${{ env.MYSQL_DB }}
