--- a/.github/workflows/build-release-changelog-tagged.yml
+++ b/.github/workflows/build-release-changelog-tagged.yml
@@ -25,20 +25,21 @@ jobs:
     # Docs: https://docs.github.com/en/actions/using-containerized-services
     services:
       mysql:
-        image: mysql:8
+        image: bitnami/mysql:8.0.20
         env:
           MYSQL_ROOT_PASSWORD: ${{ env.MYSQL_ROOT_PASSWORD }}
-          # MYSQL_ROOT_HOST: ${{ env.MYSQL_ROOT_HOST }}
-          MYSQL_DATABASE: ${{ env.MYSQL_DB }}
           MYSQL_PASSWORD: ${{ env.MYSQL_PASSWORD }}
+          ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: ${{ env.MYSQL_DB }}
+          MYSQL_AUTHENTICATION_PLUGIN: mysql_native_password
+          # MYSQL_ROOT_HOST: ${{ env.MYSQL_ROOT_HOST }}
         ports:
-          - 3306:3306
+          - 3306/tcp
         options: >-
-          --health-cmd="mysqladmin ping"
-          --health-interval=10s
-          --health-timeout=5s
+          --health-cmd="mysqladmin ping" 
+          --health-interval=10s 
+          --health-timeout=5s 
           --health-retries=3
-          --entrypoint sh mysql:8 -c "exec docker-entrypoint.sh mysqld --default-authentication-plugin=mysql_native_password"
 
     steps:
     # check out the repository, so the workflow can access it
