--- a/.github/workflows/build-release-changelog-tagged.yml
+++ b/.github/workflows/build-release-changelog-tagged.yml
@@ -88,7 +88,7 @@ jobs:
 
     - name: Run Mocha tests, which in turn run test:js (Cypress tests) and test (WordPress/PHP tests)
       run: |
-        mysql --host=${{ env.MYSQL_ROOT_HOST }} --user=${{ env.MYSQL_USER }} --password=${{ env.MYSQL_ROOT_PASSWORD }} ${{ env.MYSQL_DB }} --ssl-mode=disabled
+        mysql --host=${{ env.MYSQL_ROOT_HOST }} --user=${{ env.MYSQL_USER }} --password=${{ env.MYSQL_ROOT_PASSWORD }} ${{ env.MYSQL_DB }}
         npm run test:internal --if-present
       env:
         WPUNIT_DB_USER: ${{ env.MYSQL_USER }}
