--- a/.github/workflows/build-release-changelog-tagged.yml
+++ b/.github/workflows/build-release-changelog-tagged.yml
@@ -6,7 +6,8 @@
 name: Build and release changelog if tagged
 
 on:
-  push
+  push:
+    branches: [ 'master' ]
   workflow_dispatch:
     inputs:
       debug_enabled:
