--- a/.github/workflows/build-release-changelog-tagged.yml
+++ b/.github/workflows/build-release-changelog-tagged.yml
@@ -8,13 +8,6 @@ name: Build and release changelog if tagged
 on:
   push:
     branches: [ 'master' ]
-  workflow_dispatch:
-    inputs:
-      debug_enabled:
-        type: boolean
-        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'     
-        required: false
-        default: false
 
 jobs:
   build:
@@ -96,10 +89,10 @@ jobs:
     #   run: |
     #     npm run lint:internal --if-present
 
-    # Enable tmate debugging of manually-triggered workflows if the input option was provided
+    # Enable tmate debugging if a previous step failed
     - name: Setup tmate session
+      if: ${{ failure() }}
       uses: mxschmitt/action-tmate@v3
-      if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
 
     - name: Run Mocha tests, which in turn run test:js (Cypress tests) and test (WordPress/PHP tests)
       run: |
