--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "release": "node ./scripts/release/copy-files.mjs",
     "scrape:wordpress_maintenance_page": "node ./scripts/scrape/wordpress-maintenance-page.mjs",
     "test:internal": "chmod a+x scripts/**/*.sh && chmod a+x scripts/**/*.mjs && ./test/scripts/teardown.sh && ./test/scripts/setup.sh && mocha --recursive \"./test/**/*.spec*\" --extension mjs --extension js --full-trace",
-    "test": "node ./scripts/pretest/create-wp-test-environment.mjs && ./scripts/test/phpunit.sh",
+    "test:setup": "node ./scripts/pretest/create-wp-test-environment.mjsh",
+    "test": "node ./scripts/test/phpunit.sh",
     "test:js": "node ./scripts/test/cypress.mjs",
     "version": "./scripts/changelog/changelog.sh && node ./scripts/version/plugin-bump.mjs",
     "postinstall": "./scripts/postinstall/config.sh && node ./scripts/postinstall/customise-config.mjs && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.mjs",
