Install execa [ci skip]

--- a/.github/workflows/db-debug.yml
+++ b/.github/workflows/db-debug.yml
@@ -55,6 +55,7 @@ jobs:
 
     - name: Setup WP unit test environment
       run: |
+        npm install execa
         sudo /etc/init.d/mysql start
         node ./scripts/pretest/create-wp-test-environment.mjs
       env:
