--- a/.github/workflows/db-debug.yml
+++ b/.github/workflows/db-debug.yml
@@ -3,6 +3,8 @@ name: DB Debug
 on:
   push:
     branches: [ 'master' ]
+  # Allow this workflow to be manually run from the Actions tab
+  workflow_dispatch:
 
 jobs:
   build:
