--- a/.github/workflows/build-release-changelog-tagged.yml
+++ b/.github/workflows/build-release-changelog-tagged.yml
@@ -103,48 +103,46 @@ jobs:
       if: ${{ failure() }}
       uses: mxschmitt/action-tmate@v3
 
-    # TODO Reenable once CI issues resolved
-    # - name: Archive changelog
-    #   uses: actions/upload-artifact@v1
-    #   with:
-    #     name: changelog
-    #     path: CHANGELOG.md
+    - name: Archive changelog
+      uses: actions/upload-artifact@v1
+      with:
+        name: changelog
+        path: CHANGELOG.md
 
   # The 'release' job starts with a clean directory,
   # we don't check out the repo again
   # instead we download and work with
   # the artifacts from the previous 'build' job
-  # TODO Reenable once CI issues resolved
-  # release:
-  #   runs-on: ubuntu-latest
-  #   needs: build
+  release:
+    runs-on: ubuntu-latest
+    needs: build
 
-  #   # https://stackoverflow.com/a/58869470/6850747
-  #   # https://help.github.com/en/actions/reference/workflow-commands-for-github-actions#setting-an-output-parameter
-  #   steps:
-  #   - name: Check Tag
-  #     id: check-tag
-  #     run: |
-  #       if [[ ${{ github.event.ref }} =~ ^refs\/tags\/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-  #         echo ::set-output name=match::true
-  #       fi
+    # https://stackoverflow.com/a/58869470/6850747
+    # https://help.github.com/en/actions/reference/workflow-commands-for-github-actions#setting-an-output-parameter
+    steps:
+    - name: Check Tag
+      id: check-tag
+      run: |
+        if [[ ${{ github.event.ref }} =~ ^refs\/tags\/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          echo ::set-output name=match::true
+        fi
 
-  #   - name: Download changelog from Build
-  #     if: steps.check-tag.outputs.match == 'true'
-  #     uses: actions/download-artifact@v2
-  #     with:
-  #       name: changelog
-  #       path: changelog
+    - name: Download changelog from Build
+      if: steps.check-tag.outputs.match == 'true'
+      uses: actions/download-artifact@v2
+      with:
+        name: changelog
+        path: changelog
 
-  #   - name: Check that artifacts were downloaded as expected
-  #     run: ls -R
+    - name: Check that artifacts were downloaded as expected
+      run: ls -R
 
-  #   - name: Upload changelog to the repository's Releases page
-  #     if: steps.check-tag.outputs.match == 'true'
-  #     uses: yakuhzi/action-release@v1
-  #     with:
-  #       changelog: changelog/CHANGELOG.md
-  #     env:
-  #       GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+    - name: Upload changelog to the repository's Releases page
+      if: steps.check-tag.outputs.match == 'true'
+      uses: yakuhzi/action-release@v1
+      with:
+        changelog: changelog/CHANGELOG.md
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
   
 
