Add linter support for the sass forward rule

--- a/config/.stylelintrc.json
+++ b/config/.stylelintrc.json
@@ -13,6 +13,7 @@
                 "elseif",
                 "extend",
                 "for",
+                "forward",
                 "function",
                 "if",
                 "include",
