--- a/.github/workflows/build-release-changelog-tagged.yml
+++ b/.github/workflows/build-release-changelog-tagged.yml
@@ -123,12 +123,12 @@ jobs:
     - name: Check Tag
       id: check-tag
       run: |
-        if [[ ${{ github.event.ref }} =~ ^refs\/tags\/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-          echo ::set-output name=match::true
+        if [[ ${{ github.ref }} =~ ^refs\/tags\/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          echo "tagged_commit=true" >> $GITHUB_ENV
         fi
 
     - name: Download changelog from Build
-      if: steps.check-tag.outputs.match == 'true'
+      if: env.tagged_commit == 'true'
       uses: actions/download-artifact@v2
       with:
         name: changelog
@@ -138,7 +138,7 @@ jobs:
       run: ls -R
 
     - name: Upload changelog to the repository's Releases page
-      if: steps.check-tag.outputs.match == 'true'
+      if: env.tagged_commit == 'true'
       uses: yakuhzi/action-release@v1
       with:
         changelog: changelog/CHANGELOG.md
