--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "nodemon": "^2.0.2",
     "normalize-html-whitespace": "^1.0.0",
     "numeral": "^2.0.6",
-    "postcss-cli": "^7.1.0",
+    "postcss": "^8.4.18",
+    "postcss-cli": "^10.0.0",
     "postcss-custom-properties": "^12.1.9",
     "postcss-pxtorem": "^6.0.0",
     "postcss-typescale": "^0.2.3",
