--- a/.github/workflows/build-release-changelog-tagged.yml
+++ b/.github/workflows/build-release-changelog-tagged.yml
@@ -116,19 +116,12 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: build
+    if: startsWith(github.ref, 'refs/tags/')
 
     # https://stackoverflow.com/a/58869470/6850747
     # https://help.github.com/en/actions/reference/workflow-commands-for-github-actions#setting-an-output-parameter
     steps:
-    - name: Check Tag
-      id: check-tag
-      run: |
-        if [[ ${{ github.ref }} =~ ^refs\/tags\/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-          echo "tagged_commit=true" >> $GITHUB_ENV
-        fi
-
     - name: Download changelog from Build
-      if: env.tagged_commit == 'true'
       uses: actions/download-artifact@v2
       with:
         name: changelog
@@ -138,7 +131,6 @@ jobs:
       run: ls -R
 
     - name: Upload changelog to the repository's Releases page
-      if: env.tagged_commit == 'true'
       uses: yakuhzi/action-release@v1
       with:
         changelog: changelog/CHANGELOG.md
