--- a/.github/workflows/build-release-changelog-tagged.yml
+++ b/.github/workflows/build-release-changelog-tagged.yml
@@ -5,10 +5,9 @@
 
 name: Build and release changelog if tagged
 
-on: 
+on:
   push:
-    tags:
-    - '*'
+    branches: [ 'master' ]
 
 jobs:
   build:
@@ -122,7 +121,7 @@ jobs:
   # the artifacts from the previous 'build' job
   release:
     needs: build
-    if: needs.build.result == 'success'
+    if: startswith( github.ref, 'refs/tags/') && needs.build.result == 'success'
     runs-on: ubuntu-latest
 
     # https://stackoverflow.com/a/58869470/6850747
