Only run build when a tag is pushed (see #67)

--- a/config/.github/workflows/build-release-tagged.yml
+++ b/config/.github/workflows/build-release-tagged.yml
@@ -5,7 +5,10 @@
 
 name: Build and release if tagged
 
-on: push
+on:
+  push:
+    tags:
+    - '*'
 
 jobs:
   build:
@@ -98,8 +101,9 @@ jobs:
   # instead we download and work with
   # the artifacts from the previous 'build' job
   release:
-    runs-on: ubuntu-latest
     needs: build
+    if: needs.build.result == 'success'
+    runs-on: ubuntu-latest
 
     # https://stackoverflow.com/a/58869470/6850747
     # https://help.github.com/en/actions/reference/workflow-commands-for-github-actions#setting-an-output-parameter
