--- a/package.json
+++ b/package.json
@@ -25,23 +25,23 @@
   "dependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.8.3",
     "@babel/register": "^7.5.5",
     "autoprefixer": "^9.6.1",
     "axios": "^1.1.2",
-    "babel-eslint": "^10.0.3",
     "chai": "^4.3.6",
     "core-js": "^3.2.1",
     "cpy": "^9.0.1",
     "cypress": "^10.6.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-chai-friendly": "^0.4.1",
-    "eslint-plugin-compat": "^3.3.0",
-    "eslint-plugin-cypress": "^2.8.1",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsdoc": "^23.0.0",
-    "eslint-plugin-json": "^1.4.0",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-chai-friendly": "^0.7.2",
+    "eslint-plugin-compat": "^4.0.2",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.6",
+    "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-markdown": "^3.0.0",
     "execa": "^6.1.0",
     "fs-extra": "^10.1.0",
