--- a/.github/workflows/build-release-changelog-tagged.yml
+++ b/.github/workflows/build-release-changelog-tagged.yml
@@ -45,6 +45,7 @@ jobs:
           --health-timeout=5s 
           --health-retries=3
 
+    steps:
     # check out the repository, so the workflow can access it
     - name: Checkout repo
       uses: actions/checkout@v3
